# Vietnamese-RAG

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml
artifacts/: chunks.parquet  hybrid_answer-relevancy.csv  hybrid_faithfulness.csv  kg_context-recall.csv  kg_faithfulness.csv  raptor_answer-relevancy.csv  raptor_context-precision.csv  routed_answer-relevancy.csv  routed_context-recall.csv  routed_faithfulness.csv  test_results_kg.json  test_results_raptor_qwen.json  test_results_routed.json
artifacts/evaluate/: hybrid_context-recall.csv  kg_answer-relevancy.csv  raptor_context-recall.csv  raptor_faithfulness.csv  routed_answer-relevancy.csv  routed_context-recall.csv  routed_faithfulness.csv
artifacts/evaluate/summary/: mean_scores.csv  metric_summary.csv
artifacts/raptor_index/: level_0.json  level_0.npy  level_1.json  level_1.npy  level_2.json  level_2.npy  manifest.json
artifacts/test/: test_results_hybrid.json
data/benchmark/: test.json
data/benchmark/books/: book1.json  book2.json  book3.json
data/book1/markdown/: book1.md
data/book2/markdown/: book2.md
data/book3/markdown/: book3.md
vietrag/: __init__.py  config.py  types.py
vietrag/data/: chunker.py
vietrag/embeddings/: service.py
vietrag/llm/: qwen.py
vietrag/pipelines/: eval.py  ingest.py  qa.py  test.py
vietrag/rerank/: bge.py
vietrag/retrieval/: kg.py  raptor.py  router.py
